--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,16 +15,17 @@ jobs:
       matrix:
         node: [ '12', '14', '16' ]
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup node
+    - uses: actions/checkout@v2
+    - name: Setup node
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node }}
-        - run: npm install
-        - run: npm install -g typescript
-      - name: build
-        id: build
-        run: tsc
+      run: |
+        npm install
+        npm install -g typescript
+    - name: build
+      id: build
+      run: tsc
   test:
     needs: [build]
     runs-on: ubuntu-latest
