--- a/publish.yml
+++ b/publish.yml
@@ -16,7 +16,7 @@ jobs:
         node: [ '12', '14', '16' ]
     steps:
       - uses: actions/checkout@v2
-      - name: Setup node
+      - name: Setup_  node
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node }}
