--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
-        run: |
+      - run: |
           npm install
           npm install -g typescript
       - name: build
@@ -38,7 +38,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
-        run: |
+      - run: |
           npm install
           npm install -g typescript mocha ts-node
       - name: Run Tests
@@ -53,7 +53,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16.x
-        run: |
+      - run: |
           npm install
           npm install -g typescript mocha ts-node
       - name: build
