--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -84,9 +84,9 @@ jobs:
             ❗️  Status: ${{ job.status }}
 
             Jobs Status::
-              ▪️ Build: ${{jobs.build.outcome}}
-              ▪️ Test: ${{jobs.test.outcome}}
-              ▪️ Publish: ${{jobs.test.outcome}}
+              ▪️ Build: ${{ needs.build.result }}
+              ▪️ Test: ${{ needs.test.result }}
+              ▪️ Publish: ${{ needs.test.result }}
 
 
 
