--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -75,8 +75,11 @@ jobs:
           app_id: ${{ secrets.APP_ID }}
           app_private_key: ${{ secrets.APP_PRIVATE_KEY }}
       - name: notify
-        uses: ./.github/actions/external/telegram_notifier
+        uses: nick-invision/private-action-loader@v3
         with:
+          pal-repo-token: ${{ secrets.REPO_TOKEN }}
+          pal-repo-name: roiperlman/telegram_notifier
+          pal-action-directory: .github/actions/
           message: >
             Workflow Execution Summary:
             📂 Repository ${{ github.event.repository.name }}:
