--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -76,7 +76,7 @@ jobs:
           app_private_key: ${{ secrets.APP_PRIVATE_KEY }}
           configure_git: true
       - name: notify
-        uses: ./.github/actions/external/telegram_notifier
+        uses: ./.github/actions/external/telegram_notifier/.github/actions
         with:
           message: >
             Workflow Execution Summary:
