--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -89,6 +89,7 @@ jobs:
           app_id: ${{ secrets.APP_ID }}
           app_private_key: ${{ secrets.APP_PRIVATE_KEY }}
           configure_git: true
+      - run: ls  ./.github/actions/external/telegram_notifier/.github/actions/notifier
       - name: notify
         uses: ./.github/actions/external/telegram_notifier/.github/actions/notifier
         with:
