--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^12.7.9",
     "@types/semver": "^7.3.4",
     "@types/supertest": "^2.0.8",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "commander": "^5.0.0",
     "compression": "^1.7.4",
