--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
   "main": "lib/index.js",
   "directories": {
     "lib": "lib",
-    "test": "__tests__"
+    "test": "tests"
   },
   "files": [
     "lib"
   ],
   "scripts": {
     "test": "mocha -r ts-node/register ./tests/**.test.ts",
-    "build": "tsc",
-    "pub": "tsc && npm version patch && npm publish"
+    "build": "tsc --extendedDiagnostics",
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "devDependencies": {
     "@types/chai": "^4.2.3",
@@ -34,10 +34,13 @@
     "chai-as-promised": "^7.1.1",
     "commander": "^5.0.0",
     "compression": "^1.7.4",
+    "coveralls": "^3.1.1",
     "debug": "^4.1.1",
     "express-fileupload": "^1.1.6-alpha.5",
     "mocha": "^6.2.1",
     "morgan": "^1.10.0",
+    "nyc": "^15.1.0",
+    "rewire": "^5.0.0",
     "supertest": "^6.1.6",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
