--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "files": [
     "lib"
   ],
-  "keywords": ["express", "server"],
+  "keywords": [
+    "express",
+    "server"
+  ],
   "scripts": {
     "test": "mocha -r ts-node/register ./tests/**.test.ts",
     "build": "tsc --extendedDiagnostics",
-    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "gen_docs": "npx typedoc --plugin typedoc-plugin-markdown --entryPoints ./src/index.ts"
   },
   "devDependencies": {
     "@types/chai": "^4.2.3",
@@ -45,6 +49,7 @@
     "supertest": "^6.1.6",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
+    "typedoc-plugin-markdown": "^3.10.4",
     "typescript": "^4.3.5"
   },
   "dependencies": {
