--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -88,6 +88,7 @@ jobs:
           app_id: ${{ secrets.APP_ID }}
           app_private_key: ${{ secrets.APP_PRIVATE_KEY }}
           configure_git: true
+      - run: ls /home/runner/work/express-server/express-server/.github/actions/external/telegram_notifier/.github/actions/notifier
       - name: notify
         uses: ./.github/actions/external/telegram_notifier/.github/actions/notifier
         with:
