--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-server",
+  "name": "express-server-contorl",
   "version": "1.0.1",
   "description": "Control the setup process of express applications",
   "author": "Roi Perlman <Roi.Perlman@gmail.com>",
